# homework-13-2

./: .coverage  .env  .flake8  README.md  pyproject.toml  user_settings.json
course_project_1/: pyvenv.cfg
course_project_1/Scripts/: activate  activate.bat
data/: operations.xlsx
src/: app.py  external_api.py  filter_transactions.py  main.py  processing.py  transactions_csv.py  transactions_xlsx.py  utils.py  views.py
src/data/: transactions_excel.xlsx
tests/: test_app.py  test_categorize_transactions.py  test_external_api.py  test_filter_transactions.py  test_main.py  test_utils.py  test_views.py  test_widget.py
