[tool.poetry]
name = "homework-13-2"
version = "0.1.0"
description = ""
authors = ["NazKar@Nazir <karimov.nazir00@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '''
(
    \.git
    |\.tox
    |\.venv
    |\.env
    |build
    |dist
)
'''

[tool.isort]
line_length = 119
skip = [
    '.git',
    '.tox',
    '.venv',
    '.env',
    'build',
    'dist',
]

[tool.mypy]
line-length = 119
exclude = [
    "\\.git",
    "\\.tox",
    "\\.venv",
    "\\.env",
    "build",
    "dist",
]
